--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         </div>
     </div>
 
+    <div class="counter">
+        <!-- hitwebcounter Code START -->
+        <a href="https://www.hitwebcounter.com" target="_blank">
+            <img src="https://hitwebcounter.com/counter/counter.php?page=7963128&style=0008&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0" /></a>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
