--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <audio src="audio.mp3" id="uwu"></audio>
     <div class="wrapper">
         <div class="captcha">
             <button onclick="startCaptcha()" id="btn-start" class="btn-start">
